# sapling

./: .gitignore  CLAUDE.md  Cargo.toml  ROADMAP.md  build-ios.sh  flake.nix  justfile  rust-toolchain.toml
.claude/commands/: sense-check.md  start.md  stop.md
.github/workflows/: ios.yml  release.yml  rust.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
brand/: design-system.md  mockups.html  nav-mockups.html
core/: Cargo.toml
core/src/: error.rs  geo.rs  gpx.rs  lib.rs  models.rs  recording.rs  store.rs
docs/: mockups.md
ffi/: Cargo.toml  uniffi.toml
ffi/src/: lib.rs
ios/: Info.plist  project.yml
ios/Bindings/: SaplingCore.swift  SaplingCoreFFI.h  SaplingCoreFFI.modulemap
ios/Sources/: ActiveRoutePanel.swift  BackgroundLocationModal.swift  CommunityView.swift  ContentView.swift  ElevationProfileView.swift  ExploreView.swift  GemDetailSheet.swift  GemHelpers.swift  GemQuickAdd.swift  GemTypePicker.swift  GemViewModel.swift  LocationProvider.swift  MapGeometry.swift  MapView.swift  MyTripsView.swift  OfflineMapButton.swift  OfflineMapManager.swift  OfflineMapSheet.swift  OnboardingView.swift  RecordingViewModel.swift  RootView.swift  RouteBuilderViewModel.swift  RouteComponents.swift  RouteGeometry.swift  RouteListView.swift  RouteService.swift  SaplingApp.swift  SaplingColors.swift  SeedDetailSheet.swift  SeedHelpers.swift  SeedListView.swift  SeedQuickAdd.swift  SeedTypePicker.swift  SeedViewModel.swift  StopRecordingSheet.swift  TrailDetailView.swift  TrailResult.swift  (+6 more)
uniffi-bindgen/: Cargo.toml
(+5 files in other folders)
