[package]
name = "sapling-core"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.34", features = ["bundled"] }
rusqlite_migration = "2"
geo = "0.28"
gpx = "0.10"
uuid = { version = "1", features = ["v7"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
time = "0.3"
thiserror = "2"
log = "0.4"

[dev-dependencies]
proptest = "1"
insta = { version = "1", features = ["json"] }
tempfile = "3"
