[package]
name = "sapling-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "sapling"

[dependencies]
sapling-core = { path = "../core" }
uniffi = { version = "0.29" }
thiserror = "2"

[build-dependencies]
uniffi = { version = "0.29", features = ["build"] }
